--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
     <meta charset="UTF-8">
     <title>Train Jam 2018</title>
 </head>
