--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         }
     </style>
     <meta charset="UTF-8">
-    <title>Train Jam 2018</title>
+    <title>Portrayal - Train Jam 2018</title>
 </head>
 <body>
 <script src="js/phaser.js"></script>
